--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,6 +58,32 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  
+  function playSound(e) {
+    // use [] to access custom attribute
+    let audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    // console.log(audio);
+    if (!audio) return;
+    // stop the playing and then replay
+    audio.currentTime = 0;
+    audio.play();
+    // adding key press css style
+    let key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+    key.classList.add('playing');
+  }
+
+  // transition backward after the style transform end
+  function removeTransition(e) {
+    if (e.propertyName !== 'transform') return;
+    // set the key button style to the start
+    this.classList.remove("playing");
+  }
+
+  let keys = document.querySelectorAll(".key");
+
+  keys.forEach(key => key.addEventListener("transitionend", removeTransition));
+
+  window.addEventListener("keydown", playSound);
 
 </script>
 
