--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,11 +62,38 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transition: all 0.1s;
+      transition-timing-function: cubic-bezier(0.07, 2.48, 0.58, 1);
     }
 
   </style>
 
   <script>
+    const secondHand = document.querySelector(".second-hand");
+    const minHand = document.querySelector(".min-hand");
+    const hourHand = document.querySelector(".hour-hand");
+
+    function tick() {
+      const now = new Date();
+      const second = now.getSeconds();
+      const secondDegree = (second/60)*360 + 90;
+
+      secondHand.style.transform = `rotate(${secondDegree}deg)`
+
+      const min = now.getMinutes();
+      const minDegree = (min/60) * 360 + 90;
+
+      minHand.style.transform = `rotate(${minDegree}deg)`;
+      
+      const hour = now.getHours();
+      const hourDegree = (hour %12 /12) *360 + 90; 
+
+      hourHand.style.transform = `rotate(${hourDegree}deg)`;
+    }
+
+    setInterval(tick, 1000);
+
 
 
   </script>
