--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -22,9 +22,21 @@
 
   <style>
 
-    /*
-      misc styles, nothing to do with CSS variables
-    */
+    :root {
+      --base: #ffc600;
+      --spacing: 10px;
+      --blur: 5px;
+    }
+
+    img {
+      padding: var(--spacing);
+      background-color: var(--base);
+      filter: blur(var(--blur));
+    }
+
+    .hl {
+      color: var(--base);
+    }
 
     body {
       text-align: center;
@@ -45,6 +57,17 @@
   </style>
 
   <script>
+    function updateStyle() {
+      // console.log(this.value);
+      const suffix = this.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+    }
+
+    const inputs = document.querySelectorAll('.controls input');
+
+    inputs.forEach(input => {input.addEventListener("change", updateStyle)});
+    inputs.forEach(input => {input.addEventListener("mousemove", updateStyle)});
+
   </script>
 
 </body>
